AS24-11103 prevent whole documentation from horizontal scrolling

--- a/docs/css/documenation.scss
+++ b/docs/css/documenation.scss
@@ -3,7 +3,7 @@
 
 
 body {
-    //padding: 20px 40px;
+    overflow-x: hidden;
 }
 
 h1 {
